# GameThePy

./: README.md  environment.yml  pyproject.toml
.img/: fun2.jfif
src/gamethepy/: __init__.py
src/gamethepy/game_enginge/: game_engine.py  random_game.py
src/gamethepy/normal_form_games/: __init__.py  lane_driving_game.py  matching_pennies_game.py  prisoner_dilemas_game.py  rock_paper_scissors_game.py
src/gamethepy/normal_form_games/theoretic/: common_payoff_games.py  constant_sum_games.py  normal_form_games.py
src/gamethepy/player_strategy/: __init__.py  binaryPlayer.py
src/gamethepy/simpleGames/: prisonersDilemma.py
